Fix navbar overlapping subject header
[#166087284]

--- a/src/components/layout/PageLayout.less
+++ b/src/components/layout/PageLayout.less
@@ -22,7 +22,7 @@
       position: fixed;
       z-index: 1000;
       width: 100%;
-      min-height: 88px;
+      min-height: 83px;
 
       .logo {
         width: 110px;
