--- a/src/views/collection/DiscoverCollectionsView.less
+++ b/src/views/collection/DiscoverCollectionsView.less
@@ -18,6 +18,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin-top: 20px;
 
     h1 {
       strong {
